# waveshaper

./: .gitignore  README.md  pyproject.toml
src/waveshaper/: __init__.py  client.py  waveshaper_usb.py  ws_server.py
tests/: test_client.py
